weird height issue on mobile?
I added a height to the #query ID so that it doesn't cut off the
options on mobile

--- a/src/css/seed.less
+++ b/src/css/seed.less
@@ -267,6 +267,7 @@ background:#CE473D;
   background: white;
   padding: 1em;
   min-width: 240px;
+  height:200px;
 
   h3 {
     margin-bottom: 8px;
@@ -313,7 +314,6 @@ background:#CE473D;
   display:block;
    overflow: hidden;
   display: table;
-/*  line-height:1.2;*/
     padding-bottom: 5px;
 }
 
@@ -333,7 +333,9 @@ background:#CE473D;
 }
 
 .explore-text {
+
   font-size:90%;
   font-weight:bold;
   padding:10px 0;
+  clear:left;
 }
